--- a/product.html
+++ b/product.html
@@ -26,15 +26,23 @@
     transition: all 0.5s ease-in-out;
     margin: 20px auto;
   }
+
   .card .image-container {
     position: relative;
     width: 100%;
-    height: 130px;
     border-radius: 0.7rem;
     border-top-right-radius: 4rem;
     margin-bottom: 1rem;
+    overflow: hidden; /* ensures rounded corners */
   }
-  .card .image-container img { width:100%; height:100%; object-fit:cover; border-radius:inherit; }
+
+  .card .image-container img {
+    width: 100%;
+    height: auto; /* preserves aspect ratio */
+    display: block;
+    border-radius: inherit;
+  }
+
   .card .content { padding:0 0.8rem; margin-bottom:1rem; }
   .card .content .product-name { font-weight:700; color:#666; font-size:0.7rem; margin-bottom:1rem; }
   .card .button-container { display:flex; gap:0.3rem; margin-bottom:10px; }
