Replaced product card with Smit-Prajapati Uiverse.io card

--- a/product.html
+++ b/product.html
@@ -5,16 +5,25 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Product Page</title>
 <style>
-  /* Base Styles */
-  body { font-family: "Helvetica Neue", Arial, sans-serif; margin:0; background:#fafafa; color:#333; }
+  body { 
+    font-family: "Helvetica Neue", Arial, sans-serif; 
+    margin: 0; 
+    background: #fafafa; 
+    color: #333;
+  }
+  .header { 
+    position: sticky; top: 0; background: #fff; padding: 12px 20px; 
+    display: flex; align-items: center; justify-content: space-between;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08); z-index: 1000;
+  }
+  .logo { font-weight: bold; font-size: 1.2rem; text-decoration: none; color: #222; }
+  .cart { position: relative; font-size: 1.4rem; text-decoration: none; color: #444; }
+  #cart-count { position: absolute; top: -8px; right: -10px; background: #f1641e; color: #fff; border-radius: 50%; padding: 2px 7px; font-size: 12px; font-weight: bold; }
 
-  /* Header */
-  .header { position: sticky; top:0; background:#fff; padding:12px 20px; display:flex; align-items:center; justify-content:space-between; box-shadow:0 2px 6px rgba(0,0,0,0.08); z-index:1000; }
-  .logo { font-weight:bold; font-size:1.2rem; text-decoration:none; color:#222; }
-  .cart { position:relative; font-size:1.4rem; text-decoration:none; color:#444; }
-  #cart-count { position:absolute; top:-8px; right:-10px; background:#f1641e; color:#fff; border-radius:50%; padding:2px 7px; font-size:12px; font-weight:bold; }
+  /* Product Container */
+  .product-container { display: flex; justify-content: center; align-items: center; margin: 20px; }
 
-  /* Uiverse.io Card */
+  /* ==== Uiverse.io Card Style ==== */
   .card {
     --accent-color: #ffd426;
     position: relative;
@@ -22,40 +31,34 @@
     background: white;
     border-radius: 1rem;
     padding: 0.3rem;
-    box-shadow: rgba(100,100,111,0.2) 0px 50px 30px -20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 50px 30px -20px;
     transition: all 0.5s ease-in-out;
-    margin: 20px auto;
   }
-
   .card .image-container {
     position: relative;
     width: 100%;
-    height: 130px;
+    height: 240px; /* increase height so full photo fits */
     border-radius: 0.7rem;
     border-top-right-radius: 4rem;
     margin-bottom: 1rem;
-    overflow: hidden;
   }
-
   .card .image-container img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: inherit;
   }
-
-  .card .content { padding:0 0.8rem; margin-bottom:1rem; }
-  .card .content .product-name { font-weight:700; color:#666; font-size:0.7rem; margin-bottom:1rem; }
-  .card .content .price { font-weight:900; font-size:0.9rem; margin-bottom:1rem; }
-
-  .card .button-container { display:flex; gap:0.3rem; margin-bottom:10px; }
-  .card .button-container .button { border-radius:1.4rem 1.4rem 0.7rem 0.7rem; border:none; padding:0.5rem 0; background:var(--accent-color); color:white; font-weight:900; cursor:pointer; }
+  .card .content { padding: 0px 0.8rem; margin-bottom: 1rem; }
+  .card .content .brand { font-weight: 900; color: #a6a6a6; }
+  .card .content .product-name { font-weight: 700; color: #666666; font-size: 0.7rem; margin-bottom: 1rem; }
+  .card .button-container { display: flex; gap: 0.3rem; margin-bottom: 1rem; }
+  .card .button-container .button { border-radius: 1.4rem 1.4rem 0.7rem 0.7rem; border: none; padding: 0.5rem 0; background: var(--accent-color); color: white; font-weight: 900; cursor: pointer; flex: 1; }
   .card .button-container .button:hover { background: orangered; }
-  .card .button-container .buy-button { flex:auto; }
-  .card .button-container .cart-button { display:grid; place-content:center; width:50px; }
+  .card:hover { transform: scale(1.03); }
 
-  @media (max-width:480px){
+  @media (max-width: 480px) {
     .card { width: 90%; }
+    .card .image-container { height: 200px; }
   }
 </style>
 </head>
@@ -98,13 +101,12 @@ function renderProduct() {
         <img src="${product.image}" alt="${product.name}">
       </div>
       <div class="content">
+        <div class="brand">Brand</div>
         <div class="product-name">${product.name}</div>
-        <div class="price">$${(product.price/100).toFixed(2)}</div>
-        <div class="button-container">
-          <button class="button buy-button" onclick="buyNow('${product.id}')">Buy Now</button>
-          <button class="button cart-button" onclick="addToCart('${product.id}')">🛒</button>
-        </div>
-        <p>${product.description || 'No description available.'}</p>
+      </div>
+      <div class="button-container">
+        <button class="button buy-button" onclick="buyNow('${product.id}')">Buy Now</button>
+        <button class="button cart-button" onclick="addToCart('${product.id}')">Add to Cart</button>
       </div>
     </div>
   `;
