--- a/product.html
+++ b/product.html
@@ -3,88 +3,139 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>My Shop</title>
-<link rel="stylesheet" href="style.css">
+<title>Product Page</title>
+<style>
+  /* Base Styles */
+  body { font-family: "Helvetica Neue", Arial, sans-serif; margin:0; background:#fafafa; color:#333; }
+
+  /* Header */
+  .header { position: sticky; top:0; background:#fff; padding:12px 20px; display:flex; align-items:center; justify-content:space-between; box-shadow:0 2px 6px rgba(0,0,0,0.08); z-index:1000; }
+  .logo { font-weight:bold; font-size:1.2rem; text-decoration:none; color:#222; }
+  .cart { position:relative; font-size:1.4rem; text-decoration:none; color:#444; }
+  #cart-count { position:absolute; top:-8px; right:-10px; background:#f1641e; color:#fff; border-radius:50%; padding:2px 7px; font-size:12px; font-weight:bold; }
+
+  /* Card Styles (Uiverse.io) */
+  .card {
+    --accent-color: #ffd426;
+    position: relative;
+    width: 240px;
+    background: white;
+    border-radius: 1rem;
+    padding: 0.3rem;
+    box-shadow: rgba(100,100,111,0.2) 0px 50px 30px -20px;
+    transition: all 0.5s ease-in-out;
+    margin: 20px auto;
+  }
+
+  .card .image-container {
+    position: relative;
+    width: 100%;
+    border-radius: 0.7rem;
+    border-top-right-radius: 4rem;
+    margin-bottom: 1rem;
+    overflow: hidden; /* ensures rounded corners */
+  }
+
+  .card .image-container img {
+    width: 100%;
+    height: auto; /* preserves aspect ratio */
+    display: block;
+    border-radius: inherit;
+  }
+
+  .card .content { padding:0 0.8rem; margin-bottom:1rem; }
+  .card .content .product-name { font-weight:700; color:#666; font-size:0.7rem; margin-bottom:1rem; }
+  .card .button-container { display:flex; gap:0.3rem; margin-bottom:10px; }
+  .card .button-container .button { border-radius:1.4rem 1.4rem 0.7rem 0.7rem; border:none; padding:0.5rem 0; background:var(--accent-color); color:white; font-weight:900; cursor:pointer; }
+  .card .button-container .button:hover { background: orangered; }
+  .card .button-container .buy-button { flex:auto; }
+  .card .button-container .cart-button { display:grid; place-content:center; width:50px; }
+
+  @media (max-width:480px){
+    .card { width: 90%; }
+  }
+</style>
 </head>
 <body>
 
-<!-- Header -->
 <header class="header">
-  <h1 class="site-title">My Shop</h1>
-  <div class="cart-icon">
-    <svg viewBox="0 0 24 24" width="24" height="24">
-      <path d="M7 4h-2l-3 7v2h2l3 7h10l3-7h2v-2l-3-7h-2"/>
-    </svg>
-  </div>
+  <a href="index.html" class="logo">DjsDopeDesigns</a>
+  <a href="cart.html" class="cart">🛒 <span id="cart-count">0</span></a>
 </header>
 
-<!-- Product Card -->
-<div class="card">
-  <div class="image-container">
-    <img src="assets/product.jpg" alt="Product Image">
-    <div class="price">$49.99</div>
-    <div class="favorite">
-      <input type="checkbox" id="fav1">
-      <svg viewBox="0 0 24 24">
-        <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 
-                 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 2.09C13.09 3.81 14.76 
-                 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 
-                 11.54L12 21.35z"/>
-      </svg>
-    </div>
-  </div>
-
-  <div class="content">
-    <div class="brand">Brand Name</div>
-    <div class="product-name">Awesome Product</div>
-
-    <div class="color-size-container">
-      <div class="colors">
-        <ul class="colors-container">
-          <li class="color"><a href="#"></a></li>
-          <li class="color"><a href="#"></a></li>
-          <li class="color"><a href="#"></a></li>
-          <li class="color"><a href="#"></a></li>
-        </ul>
-      </div>
-      <div class="sizes">
-        <ul class="size-container">
-          <li class="size">
-            <label class="size-radio">
-              <input type="radio" name="size" checked>
-              <span class="name">S</span>
-            </label>
-          </li>
-          <li class="size">
-            <label class="size-radio">
-              <input type="radio" name="size">
-              <span class="name">M</span>
-            </label>
-          </li>
-          <li class="size">
-            <label class="size-radio">
-              <input type="radio" name="size">
-              <span class="name">L</span>
-            </label>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="rating">
-      <span>★★★★☆</span>
-    </div>
-
-    <div class="button-container">
-      <button class="button buy-button">Buy Now</button>
-      <button class="button cart-button">
-        <svg viewBox="0 0 24 24">
-          <path d="M7 4h-2l-3 7v2h2l3 7h10l3-7h2v-2l-3-7h-2"/>
-        </svg>
-      </button>
-    </div>
-  </div>
+<div class="product-container" id="product-container">
+  <!-- Product content will be rendered here -->
 </div>
+
+<script>
+let allProducts = [];
+
+// Load products.json to get product info
+fetch('products.json')
+  .then(res => res.json())
+  .then(products => {
+    allProducts = products;
+    renderProduct();
+  });
+
+function renderProduct() {
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get('id');
+  const product = allProducts.find(p => p.id === id);
+
+  if (!product) {
+    document.getElementById('product-container').innerHTML = "<p>Product not found.</p>";
+    return;
+  }
+
+  const container = document.getElementById('product-container');
+  container.innerHTML = `
+    <div class="card">
+      <div class="image-container">
+        <img src="${product.image}" alt="${product.name}">
+      </div>
+      <div class="content">
+        <div class="product-name">${product.name}</div>
+        <div class="price">$${(product.price/100).toFixed(2)}</div>
+        <div class="button-container">
+          <button class="button buy-button" onclick="buyNow('${product.id}')">Buy Now</button>
+          <button class="button cart-button" onclick="addToCart('${product.id}')">🛒</button>
+        </div>
+        <p>${product.description || 'No description available.'}</p>
+      </div>
+    </div>
+  `;
+}
+
+// Add to cart
+function addToCart(productId){
+  const product = allProducts.find(p => p.id === productId);
+  if(!product) return;
+
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(i => i.id === productId);
+  if(existing) existing.quantity++;
+  else cart.push({id: product.id, name: product.name, price: product.price/100, quantity:1, image: product.image});
+  localStorage.setItem("cart", JSON.stringify(cart));
+  alert(`${product.name} added to cart!`);
+  updateCartCount();
+}
+
+// Buy now
+function buyNow(productId){
+  addToCart(productId);
+  window.location.href = 'cart.html';
+}
+
+// Update cart counter
+function updateCartCount(){
+  const cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const total = cart.reduce((sum,i) => sum + i.quantity, 0);
+  document.getElementById("cart-count").textContent = total;
+}
+
+updateCartCount();
+</script>
 
 </body>
 </html>
